--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Votre Titre d'Application</title>
     <!-- Font Awesome CSS -->
+    
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-</head>
+<!-- In your index.html -->
+
+  
+
+
+  </head>
 <body>
   <app-root></app-root>
 </body>
